# engram

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: pages.yml
chrome-extension/: background.js  manifest.json  popup.html  popup.js
chrome-extension/content-scripts/: base-extractor.js  chatgpt.js  claude.js  deepseek.js  doubao.js  gemini.js  perplexity.js  qwen.js
chrome-extension/utils/: drive-api.js  session-format.js
docs/: CNAME  index.html
engram/: __init__.py  cli.py  config.py  context_gen.py  extractor_facts.py  mcp_server.py
engram/backends/: __init__.py  base.py  gitee.py  github.py  local.py  s3.py  webdav.py
engram/extractors/: __init__.py  base.py  claude_code.py  cursor.py  openclaw.py  opencode.py
engram/storage/: db.py  memory_db.py  vector.py
