[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram-mcp"
version = "0.2.0"
description = "Shared memory layer for AI coding agents — bridges Claude Code, OpenClaw, Cursor, OpenCode"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["mcp", "ai", "memory", "claude-code", "cursor", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "aiofiles>=23.0.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
vector = ["sqlite-vec", "fastembed"]
github = ["requests"]
webdav = ["webdav4"]
all = ["sqlite-vec", "fastembed", "requests", "webdav4"]
pro = ["sentence-transformers>=3.0.0"]
web = ["fastapi>=0.110.0", "uvicorn>=0.29.0"]
dev = ["pytest", "ruff"]

[project.scripts]
engram = "engram.cli:app"
engram-server = "engram.mcp_server:main"

[project.urls]
Homepage = "https://engram.gamezipper.com"
Repository = "https://github.com/rorojiao/engram"

[tool.hatch.build.targets.wheel]
packages = ["engram"]
